[gd_scene load_steps=22 format=3 uid="uid://bq6mgekl3uhqd"]

[ext_resource type="Script" path="res://Player.gd" id="1_7gfun"]
[ext_resource type="Texture2D" uid="uid://b2r0mvkhsp544" path="res://assets/GFX/player/MegaMan.png" id="3_nj304"]
[ext_resource type="Texture2D" uid="uid://edx0ys707ioi" path="res://assets/GFX/Effects/hit.png" id="3_wyc4v"]

[sub_resource type="Animation" id="Animation_hpw50"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_1g8eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b8uwb"]
resource_name = "Tipping"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_y4kaq"]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_jfgif"]
resource_name = "jump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_w7ik5"]
resource_name = "shoot_idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 12]
}

[sub_resource type="Animation" id="Animation_wm6rk"]
resource_name = "shoot_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_osa1q"]
resource_name = "shoot_walk"
length = 0.48
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_xtd5c"]
resource_name = "walk"
length = 0.48
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xxjd"]
_data = {
"Idle": SubResource("Animation_hpw50"),
"RESET": SubResource("Animation_1g8eo"),
"Tipping": SubResource("Animation_b8uwb"),
"damage": SubResource("Animation_y4kaq"),
"jump": SubResource("Animation_jfgif"),
"shoot_idle": SubResource("Animation_w7ik5"),
"shoot_jump": SubResource("Animation_wm6rk"),
"shoot_walk": SubResource("Animation_osa1q"),
"walk": SubResource("Animation_xtd5c")
}

[sub_resource type="Animation" id="Animation_3w4gp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o0j23"]
resource_name = "flickering"
length = 0.06
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhkr8"]
_data = {
"RESET": SubResource("Animation_3w4gp"),
"flickering": SubResource("Animation_o0j23")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rnrp"]
size = Vector2(14, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4xk6"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_0g66m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a4s8h"]
resource_name = "vis"
length = 0.06
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cimx4"]
_data = {
"RESET": SubResource("Animation_0g66m"),
"vis": SubResource("Animation_a4s8h")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 15
script = ExtResource("1_7gfun")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_nj304")
hframes = 12
vframes = 8
region_rect = Rect2(-2, -2, 32, 32)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_5xxjd")
}

[node name="Flickering" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_bhkr8")
}

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_4rnrp")
metadata/_edit_lock_ = true

[node name="Shootanimtimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Shootpos" type="Marker2D" parent="."]
position = Vector2(13, 3)

[node name="waterdetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="waterdetect"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_s4xk6")

[node name="Bubble" type="Timer" parent="."]
one_shot = true

[node name="HitSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("3_wyc4v")

[node name="Anim" type="AnimationPlayer" parent="HitSprite"]
libraries = {
"": SubResource("AnimationLibrary_cimx4")
}

[node name="Label" type="Label" parent="."]
offset_top = -32.0
offset_right = 40.0
offset_bottom = -9.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Invincibility" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Shootanimtimer" to="." method="_on_shootanimtimer_timeout"]
[connection signal="body_entered" from="waterdetect" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="waterdetect" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Bubble" to="." method="_on_bubble_timeout"]
[connection signal="timeout" from="Invincibility" to="." method="_on_invincibility_timeout"]
